Added Refresh Token

--- a/CopyHere.Api/appsettings.json
+++ b/CopyHere.Api/appsettings.json
@@ -11,7 +11,8 @@
 
     "ApplicationSettings": {
         "JwtSecret": "THIS_IS_A_VERY_LONG_AND_SECURE_SECRET_KEY_FOR_JWT_TOKEN_SIGNING_DO_NOT_SHARE_IN_PRODUCTION",
-        "JwtTokenExpiryMinutes": 60
+        "JwtTokenExpiryMinutes": 10, // Shortened for refresh token demo
+        "RefreshTokenExpiryDays": 7
     },
 
     "AllowedHosts": "*"
